--- a/vercel.json
+++ b/vercel.json
@@ -25,5 +25,10 @@
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "backend/api/index.js": {
+      "maxDuration": 30
+    }
   }
 }
