--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,18 @@
       "dest": "/backend/api/index.js"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "dest": "/$1"
+    },
+    {
+      "src": "/favicon\\.(ico|svg)",
+      "dest": "/favicon.$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
